# covid19_SEIRSF

./: .gitignore  Cargo.toml  README.md  model_config.toml
src/: lib.rs  main.rs
src/model/: displ.rs  exp_dec_data.rs  mod.rs  one_iter.rs  total_iter.rs  trans_fns.rs
