[package]
name = "covid19_SEIRSF"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
csv = "1.1"
chrono = "0.4.19"

[profile.release]
opt-level = 3
